--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "repository": {},
   "devDependencies": {
     "assemble": "^0.4.42",
-    "handlebars-helper-repeat": "^0.2.0",
-    "handlebars-helpers": "^0.5.8",	
+    "connect-livereload": "~0.5.4",
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "^3.0.1",
     "grunt-bless": "^0.2.0",
@@ -19,9 +18,11 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-rsync": "^0.6.2",
     "grunt-spritesmith": "^4.7.1",
+    "grunt-svg-sprite": "^1.2.19",
+    "handlebars-helper-repeat": "^0.2.0",
+    "handlebars-helpers": "^0.5.8",
     "matchdep": "^0.3.0",
-    "stream-transform": "^0.1.0",
-    "connect-livereload": "~0.5.4"
+    "stream-transform": "^0.1.0"
   },
   "dependencies": {
     "handlebars-helper-repeat": "^0.2.0"
