--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "respond": "1.4.2",
     "selectivizr": "1.0.2",
     "jquery-mousewheel": "~3.1.12",
-    "fancybox": "^2.1.5"
+    "fancybox": "^2.1.5",
+	"placeholders": "~4.0.1"
   },
   "devDependencies": {}
 }
